--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-531-reflux
               </ul>
             </div>
             <div class="copyright-text">
-              <p>Official Shop</p>
+              <p>Мисливців за Душами</p>
             </div>
           </div>
         </div>
