--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-531-reflux
               </ul>
             </div>
             <div class="copyright-text">
-              <p>Мисливців за Душами</p>
+              <p>Official Store</p>
             </div>
           </div>
         </div>
@@ -107,7 +107,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Вликий вибір скінів</h4>
+                  <h4>Великий вибір скінів</h4>
                   <p>
                     Від старих, зношених костюмів до елегантного, багато
                     прикрашеного вбрання - наш магазин пропонує широкий асортимент,
