--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ https://templatemo.com/tm-531-reflux
               <a href="#"><img src="assets/images/Logo-2.jpg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Мисливців за Душами</h4>
+              <h4>Мисливці за Душами</h4>
               <span>Hunt: Showdown. World-known game</span>
             </div>
             <nav class="main-nav" role="navigation">
